<resources>
    <string name="app_name">Bliss Emojis</string>
    <string name="google_repos">google repos</string>
    <string name="insert_github_username">insert github username</string>
    <string name="avatar_list">avatar list</string>
    <string name="emoji_list">emoji list</string>
    <string name="random_emoji">random emoji</string>
    <string name="title_activity_avatar_list">Avatar List</string>
    <string name="title_activity_emoji_list">Emoji List</string>
    <string name="title_activity_repos_list">Repository List</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for fragments for navigation -->
    <string name="repo1">This is a repo 1</string>
    <string name="repo2">This is a repo 2</string>
    <string name="repo3">This is a repo 3</string>
    <string name="repo4">This is a repo 4</string>
    <string name="repo5">This is a repo 5</string>
    <string name="repo6">This is a repo 6</string>
    <string name="repo7">This is a repo 7</string>
    <string name="repo8">This is a repo 8</string>
    <string name="repo9">This is a repo 9</string>
    <string name="repo10">This is a repo 10</string>
    <string name="repo11">This is a repo 11</string>
</resources>