<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.checkpoint2.activities.main.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mint_background"
        tools:context="com.example.checkpoint2.activities.main.MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/random_emoji"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="65dp"
            app:emojiApiStatus="@{viewModel.status}"
            app:layout_constraintBottom_toTopOf="@+id/button_random_emoji"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/button_random_emoji"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginBottom="24dp"
            android:alpha="0.75"
            android:fontFamily="sans-serif-medium"
            android:text="@string/random_emoji"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toTopOf="@+id/button_emoji_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:strokeColor="?colorPrimaryVariant"
            app:strokeWidth="2dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button_emoji_list"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:alpha="0.75"
            android:fontFamily="sans-serif-black"
            android:text="@string/emoji_list"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_random_emoji"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout2"
            app:strokeColor="?colorPrimaryVariant"
            app:strokeWidth="2dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="275dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/button_emoji_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:cornerRadius="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:alpha="0.50"
                android:fontFamily="cursive"
                android:hint="@string/insert_github_username"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:baselineAlignBottom="false"
            android:clickable="true"
            android:contentDescription="@string/insert_github_username"
            android:focusable="true"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/button_emoji_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
            app:layout_constraintBottom_toTopOf="@id/button_avatar_list"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <Button
            android:id="@+id/button_avatar_list"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:alpha="0.75"
            android:fontFamily="sans-serif-black"
            android:text="@string/avatar_list"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
            app:strokeColor="?colorPrimaryVariant"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/button_google_repos"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:alpha="0.75"
            android:fontFamily="sans-serif-light"
            android:text="@string/google_repos"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_avatar_list"
            app:strokeColor="?colorPrimaryVariant"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>